--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Simple MonkeyTalk Test</string>
+
+    <!-- Main activity -->
+    <string name="main_activity_name">Main activity</string>
+    <string name="start_another_activity">Start Another activity</string>
+
+    <!-- Second activity -->
+    <string name="second_activity_name">Second activity</string>
+    <string name="finish">Finish activity</string>
+
 </resources>
